# gangraphon

./: .dockerignore  .gitignore  Dockerfile  README.deepgraphon.md  README.md  data.txt  docker-compose.yaml  pgd  requirements.txt
classification/: model.py  parse_tg_dataset.py  render_table_class.py  render_table_class2.py  split_dataset.py  train_finetune.py  train_separatetest.py
common/: data.py  functions.py  graphons.py  hom_dens_eval.py  latex_cv_graphon_tda_table.py  latex_tda_correlation_table.py  pgd.py  pickle_graphon.py  render_hds_table.py  tests.py  (+3 more)
repos/gran_repackaged/: .gitignore  README.md  pyproject.toml
repos/gran_repackaged/gran_repackaged/: run_exp.py
repos/gran_repackaged/gran_repackaged/config/: config.yaml  gran_DD.yaml
repos/gran_repackaged/gran_repackaged/dataset/: __init__.py  gran_data.py
repos/gran_repackaged/gran_repackaged/model/: __init__.py  gran_mixture_bernoulli.py
repos/gran_repackaged/gran_repackaged/runner/: __init__.py  gran_runner.py
repos/gran_repackaged/gran_repackaged/utils/: arg_helper.py  data_helper.py  data_parallel.py  dist_helper.py  eval_helper.py  logger.py  setup.py  train_helper.py  vis_helper.py
repos/graphrnn/: .gitignore  README.md  pyproject.toml
repos/graphrnn/graphrnn/: analysis.py  args.py  create_graphs.py  data.py  evaluate.py  main.py  main_DeepGMG.py  model.py  plot.py  test_MMD.py  train.py  utils.py
repos/graphrnn/graphrnn/baselines/: baseline_simple.py  mmsb.py
repos/graphrnn/graphrnn/baselines/graphvae/: data.py  model.py  train.py
repos/graphrnn/graphrnn/eval/: mmd.py  stats.py
(+19 files in other folders)
