[tool.poetry]
name = "gran_repackaged"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.6.1,<3.9"
torch = "1.5.0"
networkx = "^2.4"
tensorboard_logger = "^0.1.0"
matplotlib = "3.1.2"
scikit-learn = "^0.23.1"
torchvision = "^0.6.0"
tqdm = "^4.46.0"
pyyaml = "^5.3.1"
easydict = "^1.9"
tensorboardX = "^2.0"
pyemd = "^0.5.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.2"

[tool.poetry.scripts]
train_gran = "gran_repackaged.run_exp:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
