[tool.poetry]
name = "graphrnn"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.6.1,<3.9"
torch = "1.5.0"
networkx = "^2.3"
tensorboard_logger = "^0.1.0"
matplotlib = "3.1.2"
scikit-learn = "^0.23.1"
torchvision = "^0.6.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
train_graphrnn = "graphrnn.main:main"
train_graphvae = "graphrnn.baselines.graphvae.train:main"
